[package]
name = "strand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
hyper = { version = "0.14.25", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
http = { version = "0.2.9" }